# ObjectDetectAndTrack

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: CMakeLists.txt  CommonTypes.h  ImageDrawUtils.cpp  ImageDrawUtils.h  KalmanFilter.h  MyClass.cpp  MyClass.h  ObjectDetectorHandler.cpp  ObjectDetectorHandler.h  ObjectTracker.cpp  ObjectTracker.h  ObjectTrackerFactory.cpp  ObjectTrackerFactory.h  ObjectTrackerHandler.cpp  ObjectTrackerHandler.h  main.cpp
tst/: CMakeLists.txt
tst/src/: ApplicationTests.cpp  ObjectDetectorHandlerTests.cpp
